# ITK-dev-shared-components

./: .gitignore  .pylintrc  @AutomationLog.txt  README.md  changelog.md  pyproject.toml
.github/workflows/: Changelog.yml  Linting.yml  pylint.yml  python-publish.yml  test-python-publish.yml
ITK_dev_shared_components/SAP/: gridview_util.py  multi_session.py  opret_kundekontakt.py  sap_login.py  sap_login_cli.py  sap_util.py  tree_util.py
ITK_dev_shared_components/graph/: authentication.py  mail.py
itk_dev_shared_components/boliglaan/: common.py  login.py
itk_dev_shared_components/boliglaan/search/: search_advis.py
itk_dev_shared_components/cvr_api/: __init__.py  cvr_lookup.py
itk_dev_shared_components/eflyt/: case.py  eflyt_case.py  eflyt_letter.py  eflyt_login.py  eflyt_search.py  eflyt_util.py  login.py  move_search.py  super_search.py  util.py
itk_dev_shared_components/getorganized/: go_api.py
itk_dev_shared_components/graph/: authentication.py  common.py  file.py  mail.py  site.py
itk_dev_shared_components/kmd_nova/: __init__.py  api.py  authentication.py  case.py  cpr.py  nova_cases.py  nova_documents.py  nova_notes.py  nova_objects.py  nova_tasks.py  util.py
itk_dev_shared_components/kombit/: authentication.py  date_helper.py  digital_post.py
itk_dev_shared_components/misc/: address_lookup.py  cpr_util.py  file_util.py
itk_dev_shared_components/sap/: fmcacov.py  gridview_util.py  multi_session.py  open_fp.py  opret_kundekontakt.py  sap_login.py  sap_util.py  tree_util.py
itk_dev_shared_components/smtp/: smtp_util.py
meta/itk-dev-shared-components/: README.md  changelog.md  pyproject.toml
meta/itk-dev-shared-components/src/itk_dev_shared_components/: __init__.py
src/ITK_dev_shared_components/SAP/: grid_view.py  gridview_util.py  multi_session.py  opret_kundekontakt.py  sap_login.py  sap_login_cli.py  tree_util.py
tests/: preflight.bat  preflight.py  readme.md  run_tests.bat  run_tests_grouped.bat  test_gridview_util.py  test_multi_session.py  test_opret_kundekontakt.py  test_sap_login.py  test_tree_util.py
tests/test_cvr_api/: test_cvr_lookup.py
tests/test_eflyt/: test_case.py  test_login.py  test_move_search.py  test_search.py  test_super_search.py
tests/test_getorganized/: test_case.py
tests/test_graph/: test_mail.py
tests/test_kombit/: test_auth.py  test_digital_post.py
tests/test_misc/: test_address_lookup.py  test_cpr_util.py  test_cvr_lookup.py  test_file_util.py
tests/test_nova_api/: test_auth.py  test_cases.py  test_documents.py  test_notes.py  test_nova_api.py  test_tasks.py
tests/test_sap/: test_fmcacov.py  test_gridview_util.py  test_multi_session.py  test_open_fp.py  test_opret_kundekontakt.py  test_sap_login.py  test_tree_util.py
tests/test_smtp/: test_smtp_util.py
