[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "itk_dev_shared_components"
version = "2.14.1"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
description = "Shared components to use in RPA projects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
  "pywin32 >= 306",
  "msal == 1.*",
  "requests == 2.*",
  "beautifulsoup4 == 4.*",
  "selenium == 4.*",
  "uiautomation == 2.*",
  "requests_ntlm == 1.*"
]

[project.urls]
"Homepage" = "https://github.com/itk-dev-rpa/itk-dev-shared-components"
"Bug Tracker" = "https://github.com/itk-dev-rpa/itk-dev-shared-components/issues"

[project.optional-dependencies]
dev = [
  "python-dotenv",
  "flake8",
  "pylint"
]
